2004-10-10  Wakaba  <wakaba@suika.fam.cx>

	* domtest.pl: New script.

	* genlib.pl: New script (moved from ../../bin/).

	* ChangeLog: New file.

