@@ -50,10 +50,13 @@ sub is_ok () {
 
 sub is_not_ok (%) {
   my %opt = @_;
+  local $Error::Depth = $Error::Depth + 1;
   print STDOUT "not ok ".++($Status->{Count})." - $opt{id}\n";
   print STDERR test_comment 
       "Got ".test_value ($opt{value})." (expected: ".
       test_value ($opt{expected}) .")";
+  $Status->{Failed}->{$opt{id}} = 1;
+  exit;
 }
 
 sub plan ($) {
@@ -63,8 +66,6 @@ sub plan ($) {
 
 END {
   if ($Status->{Count} < $Status->{Number}) {
-    print STDERR test_comment $Info->{Name};
-    print STDERR test_comment $Info->{Description};
     print STDERR test_comment
                    sprintf "Looks like you planned %d tests but only ran %d.",
                            $Status->{Number}, $Status->{Count};
@@ -75,10 +76,16 @@ END {
                            $Status->{Number} - $Status->{Count};
   }
   if (keys %{$Status->{Failed}}) {
+    print STDERR test_comment $Info->{Name};
+    print STDERR test_comment $Info->{Description};
     print STDERR test_comment sprintf "Looks like you failed %d tests of %d.",
-                                      keys %{$Status->{Failed}},
+                                      0 + keys %{$Status->{Failed}},
                                       $Status->{Number};
   } else {
+    if ($Status->{Count} < $Status->{Number}) {
+      print STDERR test_comment $Info->{Name};
+      print STDERR test_comment $Info->{Description};
+    }
     print STDERR test_comment 
                    sprintf "Looks like you passed %d tests.",
                            $Status->{Count};
@@ -136,6 +143,22 @@ sub assertNotNull ($$) {
   }
 }
 
+sub assertSize ($$$) {
+  my ($id, $size, $coll) = @_;
+  if ($size == size ($coll)) {
+    is_ok;
+  } else {
+    is_not_ok (id => $id,
+               value => size ($coll),
+               expected => $size);
+  }
+}
+
+sub size ($) {
+  my $coll = shift;
+  $coll->length;
+}
+
 sub assertEquals ($$$) {
   my ($id, $expected, $actual) = @_;
   if (defined $expected and
@@ -146,9 +169,52 @@ sub assertEquals ($$$) {
            not defined $actual) {
     is_ok;
   } else {
-    not_ok (id => $id,
-            value => $actual,
-            expected => $expected);
+    is_not_ok (id => $id,
+               value => $actual,
+               expected => $expected);
+  }
+}
+
+sub assertEqualsList ($$$) {
+  my ($id, $expected, $actual) = @_;
+  if (@$expected == @$actual) {
+    for (0..$#$expected) {
+      if (defined $expected->[$_] and
+          defined $actual->[$_] and
+          $expected->[$_] eq $actual->[$_]) {
+        #
+      } elsif (not defined $expected->[$_] and
+               not defined $actual->[$_]) {
+        #
+      } else {
+        is_not_ok (id => $id,
+                   value => $actual->[$_],
+                   expected => $expected->[$_]);
+        return;
+      }
+    }
+    is_ok;
+  } else {
+    is_not_ok (id => $id, value => 'length = '.@$actual,
+               expected => 'length = '.@$expected);
+  }
+}
+
+sub assertTrue ($$) {
+  my ($id, $cond) = @_;
+  if ($cond) {
+    is_ok;
+  } else {
+    is_not_ok (id => $id, value => $cond, expected => 1);
+  }
+}
+
+sub assertFalse ($$) {
+  my ($id, $cond) = @_;
+  if ($cond) {
+    is_not_ok (id => $id, value => $cond, expected => 0);
+  } else {
+    is_ok;
   }
 }
 
