@@ -1,3 +1,7 @@
+2004-10-31  Wakaba  <wakaba@suika.fam.cx>
+
+	* genlib.pl (perl_cases): Allow last 'else' clause.
+
 2004-10-10  Wakaba  <wakaba@suika.fam.cx>
 
 	* domtest.pl: New script.
